testing fontsize for inputs to avoid having zoom in on mobile view

--- a/src/pages/styles/page.css
+++ b/src/pages/styles/page.css
@@ -1,3 +1,10 @@
+@media (max-width: 450px) {
+    input[type="text"],
+    textarea[type="text"] {
+      font-size: 16px;
+    }
+}
+
 h1 {
     text-align: center;
 }
